disable native spellchecking dictionary on Mac OS X as it doesn't support all of the locales we need it to. b=422760 r=smorgan r/ui-r=mconnor